--- a/Plugin/BTCPayServer.Plugins.Cashu/Views/Shared/_TrustedMintsInput.cshtml
+++ b/Plugin/BTCPayServer.Plugins.Cashu/Views/Shared/_TrustedMintsInput.cshtml
@@ -49,7 +49,7 @@ var existingUrls = string.IsNullOrEmpty(Model)
 
         <div id="mintsContainer">
             <div class="text-muted d-flex align-items-center">
-                <vc:icon symbol="bank" class="me-2" />
+                <vc:icon symbol="cross" class="me-2" />
                 <span>No trusted mints yet.</span>
             </div>
         </div>
@@ -169,7 +169,8 @@ var existingUrls = string.IsNullOrEmpty(Model)
                                                 class="btn btn-link btn-sm text-danger remove-mint-btn"
                                                 data-mint-id="${m.id}"
                                                 title="Remove mint">
-                                            <svg class="icon icon-sm"><use href="/svg/bootstrap-icons.svg#trash"></use></svg>
+                                            x
+<!--                                            <svg class="icon icon-sm"><use href="/svg/bootstrap-icons.svg#trash"></use></svg>-->
                                         </button>
                                     </td>
                                 </tr>
