show cashu mints by default on bitcoinmints.com

--- a/Plugin/BTCPayServer.Plugins.Cashu/Views/Shared/_TrustedMintsInput.cshtml
+++ b/Plugin/BTCPayServer.Plugins.Cashu/Views/Shared/_TrustedMintsInput.cshtml
@@ -35,7 +35,7 @@ var existingUrls = string.IsNullOrEmpty(Model)
                 <p class="text-muted mb-2">
                     Browse mints at bitcoinmints.com.
                 </p>
-                <a href="https://bitcoinmints.com"
+                <a href="https://bitcoinmints.com/?tab=mints&showCashu=true"
                    class="btn btn-outline-primary d-inline-flex align-items-center gap-2"
                    target="_blank"
                    rel="noreferrer">
